--- a/src/site/styles/user/Autoadaptive_images_for_dark_and_light_mode.css
+++ b/src/site/styles/user/Autoadaptive_images_for_dark_and_light_mode.css
@@ -1,9 +1,9 @@
-.theme-dark img[alt$="invert_dark"] {
+.theme-dark img[alt*="invert_dark"] {
   filter: invert(87.5%);
   /* mix-blend-mode: screen; */
 }
 
-.theme-light img[alt$="invert_light"] {
+.theme-light img[alt*="invert_light"] {
   filter: invert(90%) sepia(44%) contrast(107%);
   /* mix-blend-mode: screen; */
 }
