--- a/src/site/_includes/components/searchScript.njk
+++ b/src/site/_includes/components/searchScript.njk
@@ -221,11 +221,76 @@
         
         window.lastSearch = searchTerm;
         resultsDiv.innerHTML = loadingSvg;
-        
-        let results = offlineSearch(searchTerm);
-        let resultsHTML = '';
 
-        // ...rest of existing search display code...
+        let results = performOfflineSearch(searchTerm);
+        let resultsHTML = '';
+        if (!results.length) {
+            let resultParagraph = document.createElement("p");
+            resultParagraph.innerText = `No results for "${searchTerm}"`;
+            resultsDiv.innerHTML = '';
+            resultsDiv.appendChild(resultParagraph);
+            return;
+        }
+        resultsHTML += '<div style="max-width:100%;">';
+        
+        results.forEach(r => {
+            if(r.tags && r.tags.length > 0){
+                resultsHTML += `<div class="searchresult">
+                    <a class="search-link" href="${r.url}">${r.title}</a>
+                    <div onclick="window.location='${r.url}'">
+                        <div class="header-meta">
+                            <div class="header-tags">
+                                ${r.tags.map(tag=>'<a class="tag" href="JavaScript:Void(0);" onclick="window.toggleTagSearch(this)">#'+tag+'</a>').join("")}
+                            </div>
+                        </div>
+                        ${truncate(r.content, 400)}
+                    </div>
+                </div>`;
+            } else {
+                resultsHTML += `<div class="searchresult">
+                    <a class="search-link" href="${r.url}">${r.title}</a>
+                    <div onclick="window.location='${r.url}'">
+                        ${truncate(r.content, 400)}
+                    </div>
+                </div>`;
+            }
+        });
+        resultsHTML += '</div>';
+        resultsDiv.innerHTML = resultsHTML;
+    }
+
+    function performOfflineSearch(searchQuery) {
+        let data = window.docs;
+        let isTagSearch = searchQuery[0] === "#" && searchQuery.length > 1;
+
+        let searchResults = isTagSearch
+            ? window.index.search(searchQuery.substring(1), [{field: "tags"}])
+            : window.index.search(searchQuery, [
+                {field: "title", limit: 5},
+                {field: "content", weight: 10}
+            ]);
+
+        const getByField = (field) => {
+            const results = searchResults.filter((x) => x.field === field)
+            if (results.length === 0) {
+                return []
+            } else {
+                return [...results[0].result]
+            }
+        }
+
+        const allIds = new Set([
+            ...getByField("title"),
+            ...getByField("content"),
+            ...getByField("tags")
+        ])
+
+        return [...allIds].map((id) => {
+            let result = data[id];
+            // No content truncation, just filter out special tags
+            result.tags = result.tags.filter((x) => x != "gardenEntry" && x != "note");
+            return result;
+        });
     }
 
     function performSearch(searchTerm) {
