--- a/src/site/_includes/components/searchContainer.njk
+++ b/src/site/_includes/components/searchContainer.njk
@@ -1,22 +1,22 @@
 <div class="search-container" id="globalsearch" onclick="toggleSearch()">
     <div class="search-box">
-        <input type="search" id="term" placeholder="Írj be valamit...">
+        <input type="search" id="term" placeholder="Írjon be valamit...">
         <!-- Loading status indicator -->
         <div id="search-loading-status" class="search-loading-status" style="display: none;"></div>
         <div id="search-results"></div>
         <footer class="search-box-footer">
             <div class="navigation-hint">
-                <span>Enter to select</span>
+                <span>Enter-rel érvényesít</span>
             </div>
 
             <div class="navigation-hint align-icon">
                 <i  icon-name="arrow-up" aria-hidden="true"></i>
                 <i  icon-name="arrow-down" aria-hidden="true"></i>
-                <span>to navigate</span>
+                <span>gombokkal navigál</span>
             </div>
 
             <div class="navigation-hint">
-                <span>ESC to close</span>
+                <span>ESC gombbal kilép</span>
             </div>
 
         </footer>
