--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -95,3 +95,17 @@
     color: var(--text-accent);
   }
 }
+
+/* Content size revamp */
+
+body {
+  --file-line-width: 780px;
+  --font-text-size: 20px;
+}
+
+.content {
+  max-width: var(--file-line-width) !important;
+  font-size: var(--font-text-size) !important;
+  margin-left: calc(50% - (var(--file-line-width) / 2) - 40px) !important;
+  margin-right: auto !important;
+}
